--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,13 @@
     "@eslint/js": "^9.14.0",
     "@quasar/app-vite": "^2.0.0",
     "@vue/eslint-config-prettier": "^10.1.0",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.5.1",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "vite-plugin-checker": "^0.8.0"
   },
   "engines": {
